--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td>
           <h1>Kalpana Tripathi</h1>
           <p><em>CSE Student from <strong><a href='www.cecbilaspur.ac.in'>Chouksey Engineering College</a></strong>.</em></p>
-          <p>I am a CSE student and love Web Development, I love tea and chocolates.</p>
+          <p>I am a CSE student and Web Developer in making, I love tea and chocolates.</p>
         </td>
       </tr>
     </table>
