--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
       </tr>
     </table>
     <hr>
-    <h3>Education and Schools</h3>
+    <h3>Qualification</h3>
     <ul>
-      <li>1-3rd Grade was from Talchar Public School, Talchar, Orissa.</li>
-      <li>4th Grade was from Vidyaniketan School, Raichur, Karnataka.</li>
-      <li>5th Grade was from St. Claret Primary-Secondary School, Medchal, Hyderabad, 2009.</li>
-      <li>6th Grade was from Basava Vidyaniketan School, Bellary, 2011.</li>
-      <li>7-9th Grade was from Infant Jesus High School, Raichur, Karnataka, 2013.</li>
-      <li>10-12th Grade was from DPS High School, Raigarh, Chhattisgarh, 2016.</li>
+      <li>10th Class CBSE, DPS</li>
+      <li>12th Class CBSE, DPS</li>
+      <li>BE, Chouksey Engineering College</li>
     </ul>
     <hr>
     <h3>My Hobbies</h3>
@@ -41,13 +38,13 @@
       <tr>
         <td>Web Development</td>
         <td>★★★★★</td>
-        <td>CSS</td>
+        <td>Dancing</td>
         <td>★★★★☆</td>
       </tr>
       <tr>
-        <td>Java</td>
-        <td>★★★☆☆</td>
-        <td>DBMS</td>
+        <td>Drinking Water</td>
+        <td>★★★★☆</td>
+        <td>Singing</td>
         <td>★★★☆☆</td>
       </tr>
     </table>
