--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <td>★★★★☆</td>
       </tr>
       <tr>
-        <td>Drinking Water</td>
+        <td>Drawing</td>
         <td>★★★★☆</td>
         <td>Singing</td>
         <td>★★★☆☆</td>
