--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <h3>Skills</h3>
     <table cellspacing='15px'>
       <tr>
-        <td>Web Development</td>
-        <td>★★★★★</td>
+        <td>Web Designing</td>
+        <td>★★★★☆</td>
         <td>Dancing</td>
         <td>★★★★☆</td>
       </tr>
       <tr>
-        <td>Drawing</td>
+        <td>Cooking</td>
         <td>★★★★☆</td>
         <td>Singing</td>
         <td>★★★☆☆</td>
