--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
     <title>Contact Information</title>
   </head>
   <body>
-    <p>Contact no. +919340316991</p>
+    <p>Contact no. +919340216989</p>
     <p>My Address</p>
     <p>VIP City TRIVENI MANSION, House No-06, Bilaspur, Chhattisgarh</p>
-    <p>kalpitripathi97@gmail.com</p>
+    <p>kalpanatripathi0597@gmail.com</p>
     <hr>
     <br>
-    <form class="form-1" action="mailto:info@example.com" method="post">
+    <form class="form-1" action="mailto:kalpanatripathi0597@gmail.com" method="post">
       <label for="">Your name:</label>
       <input type="text" name="" value="">
       <br>
