--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href='https://en.wikipedia.org/wiki/Fundamental_interaction'>Nature</a></li>
       <li>Self-care</li>
     </ol>
-    <a href='contact.html' target='_blank'>Contact Information</a>
+    <a href='contact.html'>Contact Information</a>
     <hr>
     <h3>Skills</h3>
     <table cellspacing='15px'>
